--- a/frontend/styleUsers.css
+++ b/frontend/styleUsers.css
@@ -6,9 +6,11 @@ body {
     flex-direction: column;
 }
 table{
+    -webkit-box-shadow: 0px 0px 15px 3px #919191; 
+    box-shadow: 0px 0px 15px 3px #919191;
     padding: 10px;
     margin: auto;
-    border-radius: 2px;
+    border-radius: 10px;
     background-color: rgb(85, 125, 236);
     
 }
