--- a/frontend/styleUsers.css
+++ b/frontend/styleUsers.css
@@ -8,28 +8,39 @@ body {
 table{
     -webkit-box-shadow: 0px 0px 15px 3px #919191; 
     box-shadow: 0px 0px 15px 3px #919191;
+
     padding: 10px;
     margin: auto;
     border-radius: 10px;
-    background-color: rgb(85, 125, 236);
+    border: solid 2px #a0a0a0;
+    background-color: #e4e4e4;
     
 }
 thead{
-    background-color: rgb(194, 206, 241);
+    background-color: #ffffff;
 }
 th{
     padding: 20px;
     margin: auto;
-    border-radius: 5px;
-    border: solid 2px rgb(85, 125, 236);
+    border-radius: 5px; 
+    border: solid 2px #a0a0a0;
 }
 tbody{
     text-align: left;
-    background-color: rgb(194, 206, 241);
+    background-color: #ffffff;
     font-size: medium;
 }
+tr:nth-child(even){
+    background: #c9c9c9;
+}
+
+
+
 #id{
     text-align: center;
+}
+button{
+    border: solid 1px rgb(27, 27, 27);
 }
 .btn-excluir{
     font-size: medium;
