Backend - function for button 'editar'

--- a/frontend/styleUsers.css
+++ b/frontend/styleUsers.css
@@ -43,7 +43,7 @@ button{
     border: solid 1px rgb(27, 27, 27);
 }
 .btn-voltar{
-    background: #919191;
+    background: #c2c2c2;
     width: auto;
     padding: 5px 10px;
     margin-bottom: 20px;
